--- a/app/assets/stylesheets/homepage/splash.scss
+++ b/app/assets/stylesheets/homepage/splash.scss
@@ -1,6 +1,4 @@
 
-
-
 .splash {
   display: flex;
   flex-grow: 1;
@@ -12,8 +10,8 @@
 
 .jumbotron {
   width: 100%;
-  height: 700px;
-  background: url(http://res.cloudinary.com/dfld7chk4/image/upload/v1467173555/jumbotron_mnuafe.png);
+  height: 750px;
+  background: url(http://res.cloudinary.com/dfld7chk4/image/upload/v1467255716/splashpage_fe9nkj.jpg);
   background-size: cover;
   background-position: bottom;
   text-align: center;
