--- a/app/assets/stylesheets/api/indexpage.scss
+++ b/app/assets/stylesheets/api/indexpage.scss
@@ -24,10 +24,10 @@
 
 
 .venue-list-item {
-
-  height: 270px;
+    margin-top: 30px;
+    height: 270px;
     width: 270px;
-    padding: 15px;
+    padding: 5px;
     color: black;
     cursor: pointer;
     float: left;
