--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -24,7 +24,10 @@ html, body, #root {
 li {
   list-style: none;
 }
-
+button{
+  background: red;
+  border: 1px solid black;
+}
 header {
   color: black ;
   background-color: white;
