running version with  user show page working and map popuating

--- a/app/assets/stylesheets/api/indexpage.scss
+++ b/app/assets/stylesheets/api/indexpage.scss
@@ -18,9 +18,12 @@
 
 }
 
-.venues-box{
-}
-
+.map {
+  margin-top: 20px;
+   width: 295px;
+   height: 295px;
+   border: 1px solid black;
+ }
 
 
 .venue-list-item {
