--- a/app/assets/stylesheets/api/indexpage.scss
+++ b/app/assets/stylesheets/api/indexpage.scss
@@ -18,9 +18,9 @@
 
 }
 
-.map {
-  margin-top: 20px;
-   width: 295px;
+.themap {
+   margin: 10px;
+   width: 100%;
    height: 295px;
    border: 1px solid black;
  }
