--- a/app/assets/stylesheets/api/indexpage.scss
+++ b/app/assets/stylesheets/api/indexpage.scss
@@ -1,3 +1,9 @@
+.index-page{
+  height: 100%;
+  width: 100%;
+}
+
+
 
 .index-page-body {
   display: flex;
@@ -5,12 +11,13 @@
   flex-wrap: wrap;
   flex-direction: row;
   width: 100%;
-  height: 830px;
+  height: 870px;
   flex-direction: row;
   justify-content: space-around;
   background: url(http://res.cloudinary.com/dfld7chk4/image/upload/v1467248171/SanFrancisco_0_ptyqri.jpg);
   background-size: cover;
   background-position: bottom;
+  overflow: scroll;
 }
 
 
@@ -25,9 +32,18 @@
    border: 1px solid black;
  }
 
+ .venue-items {
+   height: 100%;
+   width: 100%;
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: flex-start;
+   overflow: scroll
+ }
+
 
 .venue-list-item {
-    margin-top: 30px;
+
     height: 270px;
     width: 270px;
     padding: 5px;
@@ -35,4 +51,14 @@
     cursor: pointer;
     float: left;
     background: white;
+    overflow: scroll;
+    position: relative;
+    margin: 10px;
+    margin-top: 20px;
+    transition: transform, .5s, height, margin
+}
+
+.venue-list-item:hover{
+    height: 310px;
+    margin-top: 10px
 }
