--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -4,19 +4,20 @@ header {
   height: 60px;
   font-size: 16px;
   border-bottom: 1px solid white;
+
+  img, a {
+    cursor: pointer;
+  }
+
   a {
     padding: 0 10px;
     border-right: 0.3px solid black;
-    cursor: pointer;
   }
 
   div{
     height: 100%
   }
 }
-
-
-
 
 .header-content{
   display: flex;
@@ -25,11 +26,13 @@ header {
   align-items: center;
   width: 100%;
   height: 100%;
-  background: transparent;
+  background: white;
 
   a:hover{
-    background: #e4d5d5;
-    border-radius: 10px;
+    font-size: 22px;
+    // background: #e4d5d5;
+    // border-radius: 10px;
+    // border: 0px
   }
 }
 
@@ -37,7 +40,6 @@ header {
   height: 100%;
   width: 8%;
   position: relative;
-  top: -5px;
 }
 
 .header-right{
@@ -48,13 +50,9 @@ header {
   display: flex;
   flex-direction: initial;
   justify-content: flex-end;
-  text-shadow: 1px 1px black;
-  color: white;
 }
 
 .siteName{
-  font-family: montserrat;
-  font-style: italic;
   font-size: 40px;
   position: relative;
   right: -6%;
@@ -65,4 +63,43 @@ header {
 .logger{
   border-left: 0.3px solid black;
   border-right: 0px
+}
+
+
+.headerloggermodal {
+    position: relative;
+    margin: auto;
+    top: 100px;
+    border: 1px solid rgb(204, 204, 204);
+    border-radius: 4px;
+    height: 281px;
+    width: 540px;
+    padding: 20px;
+    background: rgb(255, 255, 255);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+    :last-child{
+      align-self: flex-start;
+    }
+}
+
+.log-in-form, .demo-form{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+  align-items: center;
+}
+
+.demo-form input{
+  position: relative;
+}
+
+.login-input{
+  margin-top: 14px;
+  width: 202px;
+  height: 31px;
 }
