--- a/app/assets/stylesheets/api/occasions.scss
+++ b/app/assets/stylesheets/api/occasions.scss
@@ -1,3 +1,55 @@
 // Place all the styles related to the api/occasions controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+
+.occasion-box{
+  width: 100%;
+  height: 78%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: initial;
+}
+
+.occasion-results{
+  height: 100%;
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-around;
+  overflow: scroll
+}
+
+.occasion-item{
+  display: flex;
+  height: 65px;
+  width: 33%;
+  justify-content: space-around;
+  flex-direction: column;
+  
+
+}
+
+
+.matches{
+  width: 100%;
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+
+}
+
+.nonMatches{
+  width: 100%;
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+
+}
