--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,12 +8,16 @@
   <%= csrf_meta_tags %>
   <script src="//widget.cloudinary.com/global/all.js" type="text/javascript"></script>
   <script type="text/javascript">
-    window.cloudinary_options = {
+    window.CLOUDINARY_OPTIONS = {
       cloud_name: '<%= ENV['CLOUD_NAME']%>',
-      upload_present: '<%= ENV['UPLOAD_PRESET']%>'
-
+      upload_preset: '<%= ENV['UPLOAD_PRESET']%>',
+      sources: ['local'],
+      theme: 'minimal'
     };
   </script>
+  <script type="text/javascript">
+  
+</script>
 </head>
 <body>
 
