--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,10 @@
     };
   </script>
   <script type="text/javascript">
-  
+  <% if logged_in? %>
+    window.currentUser = <%= render("api/users/user.json.jbuilder",
+    user: current_user).html_safe %>
+<% end %>
 </script>
 </head>
 <body>
