--- a/app/assets/stylesheets/api/indexpage.scss
+++ b/app/assets/stylesheets/api/indexpage.scss
@@ -22,10 +22,12 @@
 
 
 .themap {
-   margin: 10px;
-   width: 80%;
-   height: 295px;
-   border: 1px solid black;
+  margin: 10px;
+  width: 57%;
+  height: 295px;
+  right: 11%;
+  position: relative;
+  border: 1px solid black;
  }
 
 
@@ -35,23 +37,51 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  overflow: scroll;
  }
 
 .filter-bar{
-  background: #f7f7f7;
+  background: #813b8c;
+  color: white;
+  opacity: 0.7;
   display: flex;
-  height: 8.0%;
+  height: 34%;
   flex-wrap: wrap;
   overflow: scroll;
-  width: 84%;
+  width: 232px;
   justify-content: space-around;
   border-radius: 4px;
+  position: relative;
+  left: 30.5%;
+  bottom: 35%;
 
+  h4{
+    text-decoration: underline;
+    text-align: center;
+    text-indent: 40px;
+    position: relative;
+    top: 4px;
+  }
+  h5{
+    padding-right: 5px
+  }
+  p{
+    text-align: center;
+  }
   form {
     align-self: center;
     position: relative;
     top: -7px;
+    input {
+      width: 64%;
+      align-self: center;
+    }
+    .start-time, .end-time {
+      width: 45%
+    }
+    h7{
+      position: relative;
+      top:3px
+    }
   }
 
   div, h5{
@@ -64,13 +94,28 @@
   }
   button {
     cursor: pointer;
-    cursor: pointer;
-    height: initial;
+    height: 24px;
+    width: 100px;
+    text-align: center;
     align-self: center;
-    border: 0.5px solid black;
+    border: 0.5px solid white;
     border-radius: 3px;
   }
+
+  button:hover{
+    background: rgba(128, 0, 128, 0.8);
+  }
 }
+
+.filter-bar form {
+  position: relative;
+  top: -7px;
+  margin: auto;
+  display: flex;
+  padding: 10px;
+  flex-direction: column;
+}
+
 
 
  .venue-items {
@@ -79,6 +124,8 @@
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
+   position: relative;
+   top: -34%;
    overflow: scroll;
  }
 
@@ -103,3 +150,9 @@
     height: 310px;
     margin-top: 10px
 }
+
+// @media only screen and (max-width: 1050px) {
+//   .filter-bar{
+//     background: black;
+//   }
+// }
