--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -29,7 +29,7 @@ li {
 
 footer {
   color: black;
-  background-color: purple;
+  background-color: white;
   font-family: Tahoma, sans-serif;
   height: 50px;
   display: flex;
