--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -26,7 +26,7 @@ header {
   background: white;
 
   a:hover{
-    font-size: 18px;
+    text-decoration: underline;
     // background: #e4d5d5;
     // border-radius: 10px;
     // border: 0px
@@ -53,9 +53,7 @@ header {
   margin-right: 1%;
 
   a:hover{
-    font-size: 20px;
-    position: relative;
-    top: -0.5px;
+    text-decoration: underline;
 
   }
   .logger:hover{
@@ -132,4 +130,13 @@ header {
   margin-top: 14px;
   width: 202px;
   height: 31px;
+}
+
+@media only screen and (max-width: 660px) {
+  .site-title{
+    width: 0%;
+    position: relative;
+    top: 0px;
+    
+  }
 }
