--- a/app/assets/stylesheets/api/indexmodal.scss
+++ b/app/assets/stylesheets/api/indexmodal.scss
@@ -9,20 +9,18 @@
   border-radius: 4px;
   outline: none;
   box-shadow: 2px 10px 40px 0px rgba(0,0,0,0.75);
-  height: 400px;
   width: 700px;
   margin: auto;
   margin-top: 100px
 }
 
 .venue-modal-content{
-  height: 100%;
   width: 100%;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
   align-items: flex-end;
-  background: #f7f7f7;
+
 }
 
 .the-modal{
@@ -77,12 +75,55 @@
   h1, text {
     margin-top: 10px;
   }
+
+  text{
+    margin-top: 10px;
+    border: 1px solid white;
+    border-radius: 4px;
+    margin-left: 18px;
+    margin-right: 18px;
+    text-align: inherit;
+    background: #ffebff;
+  }
+
+  button{
+    margin-right: 14px;
+    border: 1px solid;
+    font-size: 16px;
+    height: 26px;
+    width: 116px;
+    text-align: center;
+    border-radius: 4px;
+  }
+  button:hover{
+    background: rgba(119, 50, 119, 0.82);
+  }
 }
+
+.look-at-times{
+  margin-right: 14px;
+  border: 1px solid;
+  font-size: 16px;
+  height: 26px;
+  width: 116px;
+  text-align: center;
+  border-radius: 4px;
+}
+
+.look-at-times:hover{
+  background: rgba(119, 50, 119, 0.82);
+}
+
+
 
 .close-button {
   position: relative;
-  top: -328px;
+  top: -322px;;
   right: 5px;
+}
+
+.close-button:hover{
+  text-decoration: underline;
 }
 
 button {
