--- a/app/assets/stylesheets/api/occasions.scss
+++ b/app/assets/stylesheets/api/occasions.scss
@@ -2,35 +2,61 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-
+.occasion-pic{
+  height: 100%;
+    width: 50%;
+}
 
 .occasion-box{
   width: 100%;
-  height: 78%;
+  height: 369px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: initial;
+  span{
+    flex-direction: column;
+    height: 100%;
+    width: 53%;
+    overflow: scroll;
+      h2{
+        align-self: center;
+        margin-top: 10px;
+        text-decoration: underline;
+        font-size: 19px;
+      }
+  }
 }
 
 .occasion-results{
-  height: 100%;
-  width: 90%;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  justify-content: space-around;
-  overflow: scroll
+  align-items: center;
+  overflow: scroll;
 }
+
+
 
 .occasion-item{
   display: flex;
-  height: 65px;
-  width: 33%;
+  height: 31%;
+  width:  56%;
+  margin-top: 10px;
   justify-content: space-around;
   flex-direction: column;
-  
-
+  button{
+      margin-right: 14px;
+      border: 1px solid;
+      font-size: 16px;
+      height: 26px;
+      align-self: center;
+      width: 116px;
+      text-align: center;
+      border-radius: 4px;
+    }
+    button:hover{
+      background: rgba(206, 76, 206, 0.26);
+    }
 }
 
 
