--- a/app/assets/stylesheets/api/create_venue_modal.scss
+++ b/app/assets/stylesheets/api/create_venue_modal.scss
@@ -14,35 +14,69 @@
 
     input, select{
       width: 60%;
-      margin: 4px;
+      margin: 5px;
+      margin-left: 8px;
      }
      p{
        margin-left: 4px;
        margin-right: 4px;
        text-align: center;
-       font-size: 10px
+       font-size: 10px;
+     }
+     h5{
+       margin-left: 4px;
+     }
+
+     h1{
+       font-size: 27px;
+      text-decoration: underline;
+      text-align: center;
+      position: relative;
+      bottom: 7px;
      }
 
      textarea{
-       margin-right: 4px;
-       margin-left: 4px;
-       margin-right: 4px;
-       margin-left: 4px;
+       margin-right: 8px;
+       margin-left: 8px;
        height: 114px;
      }
 
      button{
        cursor: pointer;
-       height: 24px;
-       width: 112px;
+       height: 26px;
+       width: 127px;
        text-align: center;
-       border-radius: 3px;
-       background: whitesmoke;
        margin-bottom: 6px;
        margin-left: 4px;
+       border:1px solid #7d99ca;
+        -webkit-border-radius: 3px;
+        -moz-border-radius: 3px;
+        border-radius: 3px;
+        font-size:12px;
+        font-family:arial, helvetica, sans-serif;
+        display:inline-block;
+        text-shadow: -1px -1px 0 rgba(0,0,0,0.3);
+        font-weight:bold;
+        color: #FFFFFF;
+        background-color: #a5b8da;
+        background-image: -webkit-gradient(linear, left top, left bottom, from(#a5b8da), to(#7089b3));
+        background-image: -webkit-linear-gradient(top, #a5b8da, #7089b3);
+        background-image: -moz-linear-gradient(top, #a5b8da, #7089b3);
+        background-image: -ms-linear-gradient(top, #a5b8da, #7089b3);
+        background-image: -o-linear-gradient(top, #a5b8da, #7089b3);
+        background-image: linear-gradient(to bottom, #a5b8da, #7089b3);
+        filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#a5b8da, endColorstr=#7089b3);
      }
      button:hover{
-       background: rgba(128, 0, 128, 0.42);
+       border:1px solid #5d7fbc;
+       background-color: #819bcb;
+       background-image: -webkit-gradient(linear, left top, left bottom, from(#819bcb), to(#536f9d));
+       background-image: -webkit-linear-gradient(top, #819bcb, #536f9d);
+       background-image: -moz-linear-gradient(top, #819bcb, #536f9d);
+       background-image: -ms-linear-gradient(top, #819bcb, #536f9d);
+       background-image: -o-linear-gradient(top, #819bcb, #536f9d);
+       background-image: linear-gradient(to bottom, #819bcb, #536f9d);
+       filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#819bcb, endColorstr=#536f9d);
      }
      .x-button{
        position: relative;
@@ -67,7 +101,7 @@
   width: 45%;
   display: flex;
   flex-direction: column;
-  background: rgba(146, 85, 146, 0.39);
+  background: url(http://res.cloudinary.com/dfld7chk4/image/upload/v1468207508/watercolor-grunge-000030-medium-blue_bra7pj.jpg);
 }
 
 
