--- a/app/assets/stylesheets/api/indexmodal.scss
+++ b/app/assets/stylesheets/api/indexmodal.scss
@@ -3,13 +3,13 @@
 .venue-modal {
   border: 1px solid #2a282b;
   position: relative;
-  background: white;
+  // background: #bfaafe;
   overflow: hidden;
   -webkit-overflow-scrolling: touch;
   border-radius: 4px;
   outline: none;
   box-shadow: 2px 10px 40px 0px rgba(0,0,0,0.75);
-  width: 700px;
+  width: 725px;
   margin: auto;
   margin-top: 100px
 }
@@ -36,7 +36,7 @@
 
 .map {
   height: 200px;
-  width: 33%;
+  width: 46%;
 }
 
 .map-thumbnail-content{
@@ -44,33 +44,43 @@
   flex-direction: row;
 
   .modal-thumbnail{
-    height: 59%;
-    width: 37%;
+    height: 200px;
+    width: 34%;
   }
 }
 
 .top-content{
   text-align: center;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
-
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    background: #813b8c;
+    color: white;
+    opacity: 0.7;
+    text-shadow: 1.5px 0.8px 0.5px black;
   h5{
     text-decoration: underline;
-
+  }
+  h4{
+    text-decoration: underline;
+    font-weight: 800;
   }
 }
 
 .small-details {
   display: flex;
   flex-direction: column;
-  height: 113px;
+  height: 150px;
+  width: 100%;
   overflow: scroll;
+  background: whitesmoke;
   h1{
     font-weight: bold;
-    align-self: center
+    align-self: center;
+    font-size: 18px;
+    text-decoration: underline;
   }
   h1, text {
     margin-top: 10px;
@@ -78,25 +88,39 @@
 
   text{
     margin-top: 10px;
-    border: 1px solid white;
     border-radius: 4px;
     margin-left: 18px;
     margin-right: 18px;
     text-align: inherit;
-    background: #ffebff;
   }
 
   button{
-    margin-right: 14px;
-    border: 1px solid;
-    font-size: 16px;
-    height: 26px;
-    width: 116px;
-    text-align: center;
-    border-radius: 4px;
+    border:1px solid #7d99ca;
+     -webkit-border-radius: 3px;
+     -moz-border-radius: 3px;
+     border-radius: 3px;
+     font-size:12px;
+     font-family:arial, helvetica, sans-serif;
+     display:inline-block;
+     text-shadow: -1px -1px 0 rgba(0,0,0,0.3);
+     font-weight:bold;
+     color: #FFFFFF;
+     background-color: #a5b8da; background-image: -webkit-gradient(linear, left top, left bottom, from(#a5b8da), to(#7089b3));
+     background-image: -webkit-linear-gradient(top, #a5b8da, #7089b3);
+     background-image: -moz-linear-gradient(top, #a5b8da, #7089b3);
+     background-image: -ms-linear-gradient(top, #a5b8da, #7089b3);
+     background-image: -o-linear-gradient(top, #a5b8da, #7089b3);
+     background-image: linear-gradient(to bottom, #a5b8da, #7089b3);
+     filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#a5b8da, endColorstr=#7089b3);
   }
   button:hover{
-    background: rgba(119, 50, 119, 0.82);
+    border:1px solid #5d7fbc;
+    background-color: #819bcb; background-image: -webkit-gradient(linear, left top, left bottom, from(#819bcb), to(#536f9d));
+    background-image: -webkit-linear-gradient(top, #819bcb, #536f9d);
+    background-image: -moz-linear-gradient(top, #819bcb, #536f9d);
+    background-image: -ms-linear-gradient(top, #819bcb, #536f9d);
+    background-image: -o-linear-gradient(top, #819bcb, #536f9d);
+    background-image: linear-gradient(to bottom, #819bcb, #536f9d);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#819bcb, endColorstr=#536f9d);
   }
 }
 
@@ -107,7 +131,10 @@
   height: 26px;
   width: 116px;
   text-align: center;
+  position: relative;
   border-radius: 4px;
+  align-self: flex-end;
+  top: 31px;
 }
 
 .look-at-times:hover{
@@ -118,8 +145,9 @@
 
 .close-button {
   position: relative;
-  top: -322px;;
-  right: 5px;
+  top: -349px;
+  right: 2px;
+  font-weight: 600;
 }
 
 .close-button:hover{
@@ -140,8 +168,11 @@ button {
   align-items: center;
   background-color: rgba(119, 50, 119, 0.82);
   color: black;
+  margin-top: -18px;
   a{
     cursor: pointer;
+    font-size: 19px;
+    font-weight: 500;
   }
   a:hover{
     color: white;
