--- a/app/assets/stylesheets/api/manager_modal.scss
+++ b/app/assets/stylesheets/api/manager_modal.scss
@@ -18,7 +18,11 @@
   width: 100%;
   height: 100%;
   flex-direction: row;
-  background: rgba(146, 85, 146, 0.39);
+  display: flex;
+width: 100%;
+height: 100%;
+flex-direction: row;
+background-image: url(http://res.cloudinary.com/dfld7chk4/image/upload/v1468207508/watercolor-grunge-000030-medium-blue_bra7pj.jpg);
 }
 
 .VenueDisplay{
@@ -30,16 +34,47 @@
   left: 45px;
   button{
     text-align: center;
-    border: 2px solid white;
     border-radius: 4px;
     position: relative;
-    margin-top: 5px;
-    left: 4px;
-  }
-  button:hover{
-    background: rgba(146, 85, 146, 0.39);
+    margin-top: 7px;
   }
 }
+
+.expand-collapse-button{
+  border:1px solid #7d99ca;
+   -webkit-border-radius: 3px;
+   -moz-border-radius: 3px;
+   border-radius: 3px;
+   font-size: 16px;
+   font-family:arial, helvetica, sans-serif;
+   display:inline-block;
+   text-shadow: -1px -1px 0 rgba(0,0,0,0.3);
+   font-weight:bold;
+   color: #FFFFFF;
+   background-color: #a5b8da;
+   background-image: -webkit-gradient(linear, left top, left bottom, from(#a5b8da), to(#7089b3));
+   background-image: -webkit-linear-gradient(top, #a5b8da, #7089b3);
+   background-image: -moz-linear-gradient(top, #a5b8da, #7089b3);
+   background-image: -ms-linear-gradient(top, #a5b8da, #7089b3);
+   background-image: -o-linear-gradient(top, #a5b8da, #7089b3);
+   background-image: linear-gradient(to bottom, #a5b8da, #7089b3);
+   filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#a5b8da, endColorstr=#7089b3);
+}
+
+.expand-collapse-button:hover{
+  border:1px solid #5d7fbc;
+  background-color: #819bcb;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#819bcb), to(#536f9d));
+  background-image: -webkit-linear-gradient(top, #819bcb, #536f9d);
+  background-image: -moz-linear-gradient(top, #819bcb, #536f9d);
+  background-image: -ms-linear-gradient(top, #819bcb, #536f9d);
+  background-image: -o-linear-gradient(top, #819bcb, #536f9d);
+  background-image: linear-gradient(to bottom, #819bcb, #536f9d);
+  filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#819bcb, endColorstr=#536f9d);
+}
+
+
+
 
 .number-of-occasions{
   font-size: 12px;
@@ -47,6 +82,7 @@
 .another-close-button{
   position: fixed;
   margin-left: 634px;
+  font-weight: 600;
 }
 .another-close-button:hover{
   text-decoration: underline;
