--- a/app/assets/stylesheets/api/occasions.scss
+++ b/app/assets/stylesheets/api/occasions.scss
@@ -14,7 +14,9 @@
   flex-direction: row;
   align-items: center;
   justify-content: initial;
+  background: whitesmoke;
   span{
+    display: flex;
     flex-direction: column;
     height: 100%;
     width: 53%;
@@ -33,17 +35,23 @@
   flex-direction: column;
   align-items: center;
   overflow: scroll;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: scroll;
+  height: 100%;
 }
 
 
 
 .occasion-item{
   display: flex;
-  height: 31%;
-  width:  56%;
+  height: 73px;
+  width: 90%;
   margin-top: 10px;
   justify-content: space-around;
   flex-direction: column;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
   button{
       margin-right: 14px;
       border: 1px solid;
@@ -54,11 +62,68 @@
       text-align: center;
       border-radius: 4px;
     }
-    button:hover{
-      background: rgba(206, 76, 206, 0.26);
-    }
 }
 
+.volunteer{
+  border:1px solid #7d99ca;
+   -webkit-border-radius: 3px;
+   -moz-border-radius: 3px;
+   border-radius: 3px;
+   font-size:12px;
+   font-family:arial, helvetica, sans-serif;
+   display:inline-block;
+   text-shadow: -1px -1px 0 rgba(0,0,0,0.3);
+   font-weight:bold;
+   color: #FFFFFF;
+   background-color: #a5b8da;
+   background-image: -webkit-gradient(linear, left top, left bottom, from(#a5b8da), to(#7089b3));
+   background-image: -webkit-linear-gradient(top, #a5b8da, #7089b3);
+   background-image: -moz-linear-gradient(top, #a5b8da, #7089b3);
+   background-image: -ms-linear-gradient(top, #a5b8da, #7089b3);
+   background-image: -o-linear-gradient(top, #a5b8da, #7089b3);
+   background-image: linear-gradient(to bottom, #a5b8da, #7089b3);
+   filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#a5b8da, endColorstr=#7089b3);
+}
+.volunteer:hover{
+  border:1px solid #5d7fbc;
+  background-color: #819bcb;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#819bcb), to(#536f9d));
+  background-image: -webkit-linear-gradient(top, #819bcb, #536f9d);
+  background-image: -moz-linear-gradient(top, #819bcb, #536f9d);
+  background-image: -ms-linear-gradient(top, #819bcb, #536f9d);
+  background-image: -o-linear-gradient(top, #819bcb, #536f9d);
+  background-image: linear-gradient(to bottom, #819bcb, #536f9d);
+  filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#819bcb, endColorstr=#536f9d);
+}
+
+
+.cancel{
+  border: 1px solid #ff6262;
+  border-radius: 3px;
+  font-size: 12px;
+  font-family: arial, helvetica, sans-serif;
+  text-decoration: none;
+  display: inline-block;
+  text-shadow: -1px -1px 0 rgba(0,0,0,0.3);
+  font-weight: bold;
+  color: #FFFFFF;
+  background-color: #ff9a9a;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#ff9a9a), to(#ff4040));
+  background-image: -webkit-linear-gradient(top, #ff9a9a, #ff4040);
+  background-image: linear-gradient(to bottom, #ff9a9a, #ff4040);
+}
+
+.cancel:hover{
+  border:1px solid #b30808;
+ background-color: #e40a0a;
+ background-image: -webkit-gradient(linear, left top, left bottom, from(#e40a0a), to(#9f0202));
+ background-image: -webkit-linear-gradient(top, #e40a0a, #9f0202);
+ background-image: -moz-linear-gradient(top, #e40a0a, #9f0202);
+ background-image: -ms-linear-gradient(top, #e40a0a, #9f0202);
+ background-image: -o-linear-gradient(top, #e40a0a, #9f0202);
+ background-image: linear-gradient(to bottom, #e40a0a, #9f0202);
+ filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#e40a0a, endColorstr=#9f0202);
+}
 
 .matches{
   width: 100%;
@@ -77,5 +142,15 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
+}
 
+.modal-close-button{
+  position: relative;
+  top: -367px;
+  right: 2px;
+  font-weight: 600;
+}
+
+.modal-close-button:hover{
+  text-decoration: underline;
 }
