--- a/app/assets/stylesheets/api/venue_index_item.scss
+++ b/app/assets/stylesheets/api/venue_index_item.scss
@@ -1,6 +1,10 @@
 .venue-thumbnail {
-    height: 245px;
-    width: 100%;
+  height: 245px;
+  width: 102%;
+  position: relative;
+  bottom: 3.5px;
+  right: 2.0px;
+
 }
 
 .white{
