--- a/app/assets/stylesheets/homepage/home.scss
+++ b/app/assets/stylesheets/homepage/home.scss
@@ -45,9 +45,12 @@
       top: 100px;
     }
     h2{
-      font-size: 30px;
-      color: black;
-      font-weight: 300;
+      font-size: 32px;
+      color: #060606;
+      margin-top: 20px;
+      text-shadow: 0.5px 0.5px black;
+      position: relative;
+      top: 93px;
 
     }
     a {
@@ -59,5 +62,6 @@
 
   .jumbotron-tag a:hover {
     color: cadetblue;
-    font-size: 51px;
+    text-decoration: underline;
   }
+  
