--- a/app/assets/stylesheets/api/occasions.scss
+++ b/app/assets/stylesheets/api/occasions.scss
@@ -14,12 +14,13 @@
   flex-direction: row;
   align-items: center;
   justify-content: initial;
-  background: whitesmoke;
+  background: url(http://res.cloudinary.com/dfld7chk4/image/upload/v1468208182/violet-watercolor-background_1048-1264_an7gwc.jpg);
   span{
     display: flex;
     flex-direction: column;
     height: 100%;
     width: 53%;
+
     overflow: scroll;
       h2{
         align-self: center;
@@ -54,13 +55,27 @@
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
   button{
       margin-right: 14px;
-      border: 1px solid;
       font-size: 16px;
       height: 26px;
       align-self: center;
       width: 116px;
       text-align: center;
-      border-radius: 4px;
+      border:1px solid #7d99ca;
+       border-radius: 3px;
+       font-size:12px;
+       font-family:arial, helvetica, sans-serif;
+       display:inline-block;
+       text-shadow: -1px -1px 0 rgba(0,0,0,0.3);
+       font-weight:bold;
+       color: #FFFFFF;
+       background-color: #a5b8da;
+       background-image: -webkit-gradient(linear, left top, left bottom, from(#a5b8da), to(#7089b3));
+       background-image: -webkit-linear-gradient(top, #a5b8da, #7089b3);
+       background-image: -moz-linear-gradient(top, #a5b8da, #7089b3);
+       background-image: -ms-linear-gradient(top, #a5b8da, #7089b3);
+       background-image: -o-linear-gradient(top, #a5b8da, #7089b3);
+       background-image: linear-gradient(to bottom, #a5b8da, #7089b3);
+       filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#a5b8da, endColorstr=#7089b3);
     }
 }
 
