--- a/app/assets/stylesheets/api/occasions.scss
+++ b/app/assets/stylesheets/api/occasions.scss
@@ -141,8 +141,12 @@
 }
 
 .matches{
+  h3{
+    text-decoration: underline;
+    font-size: 18px;
+  }
   width: 100%;
-  height: 50%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -150,9 +154,13 @@
 
 }
 
-.nonMatches{
+.non-matches{
+  h3{
+    text-decoration: underline;
+    font-size: 18px;
+  }
   width: 100%;
-  height: 50%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
