--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,11 @@
     user: current_user).html_safe %>
 <% end %>
 </script>
+
+<link rel="icon"
+    type="image/png"
+    href="http://res.cloudinary.com/dfld7chk4/image/upload/v1467517608/featheredhands-transparent-final_tns0sn.png">
+    
 </head>
 <body>
 
