--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -36,5 +36,18 @@ footer {
   font-size: 16px;
   align-items: center;
   justify-content: flex-end;
+}
 
+.footer-content{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  a{
+    cursor: pointer;
+
+  }
+  a:hover{
+    text-decoration: underline;
+  }
 }
