--- a/app/assets/stylesheets/api/create_venue_modal.scss
+++ b/app/assets/stylesheets/api/create_venue_modal.scss
@@ -11,76 +11,84 @@
     width: 700px;
     margin: auto;
     margin-top: 100px;
+    background: white;
 
     input, select{
-      width: 60%;
       margin: 5px;
       margin-left: 8px;
+      width: 94%;
+      height: 14px;
+      min-height: 28px;
+      border: 0;
+      border-bottom: 1px solid #ccc;
+      text-align: center;
+      font-size: 13px;
+     }
+
+    select{
+      width: 50%;
+    height: 20px;
+    border: 0.5px solid #de75de;
+    background: white;
+    color: black;
+    opacity: 0.9;
+    }
+    option{
+      width: 50%;
+      height: 20px;
+      background: #de75de;
+      color: white;
+      opacity: 0.9;
+    }
+
+     input:focus, textarea:focus{
+       outline-offset: 0;
+       outline: 0;
+       border: 0;
+       border-bottom: 1px solid #ccc;
      }
      p{
        margin-left: 4px;
        margin-right: 4px;
        text-align: center;
        font-size: 10px;
+       font-style: italic;
      }
      h5{
        margin-left: 4px;
+       font-size: 15px;
      }
 
      h1{
-       font-size: 27px;
-      text-decoration: underline;
+      width: 112%;
+      font-size: 20px;
       text-align: center;
+      text-indent: -45px;
       position: relative;
       bottom: 7px;
+      background: whitesmoke;;
      }
 
      textarea{
        margin-right: 8px;
        margin-left: 8px;
        height: 114px;
+       resize: none;
+        border: 0;
+        margin-top: 5px;
+        box-shadow: 0 1px 1px 1px #ccc;
      }
 
-     button{
-       cursor: pointer;
-       height: 26px;
-       width: 127px;
-       text-align: center;
-       margin-bottom: 6px;
-       margin-left: 4px;
-       border:1px solid #7d99ca;
-        -webkit-border-radius: 3px;
-        -moz-border-radius: 3px;
-        border-radius: 3px;
-        font-size:12px;
-        font-family:arial, helvetica, sans-serif;
-        display:inline-block;
-        text-shadow: -1px -1px 0 rgba(0,0,0,0.3);
-        font-weight:bold;
-        color: #FFFFFF;
-        background-color: #a5b8da;
-        background-image: -webkit-gradient(linear, left top, left bottom, from(#a5b8da), to(#7089b3));
-        background-image: -webkit-linear-gradient(top, #a5b8da, #7089b3);
-        background-image: -moz-linear-gradient(top, #a5b8da, #7089b3);
-        background-image: -ms-linear-gradient(top, #a5b8da, #7089b3);
-        background-image: -o-linear-gradient(top, #a5b8da, #7089b3);
-        background-image: linear-gradient(to bottom, #a5b8da, #7089b3);
-        filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#a5b8da, endColorstr=#7089b3);
-     }
+
      button:hover{
-       border:1px solid #5d7fbc;
-       background-color: #819bcb;
-       background-image: -webkit-gradient(linear, left top, left bottom, from(#819bcb), to(#536f9d));
-       background-image: -webkit-linear-gradient(top, #819bcb, #536f9d);
-       background-image: -moz-linear-gradient(top, #819bcb, #536f9d);
-       background-image: -ms-linear-gradient(top, #819bcb, #536f9d);
-       background-image: -o-linear-gradient(top, #819bcb, #536f9d);
-       background-image: linear-gradient(to bottom, #819bcb, #536f9d);
-       filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#819bcb, endColorstr=#536f9d);
+       box-shadow: inset 0 1px 1px 1px #ccc;
+     }
+     button:focus{
+       box-shadow: inset 0 1px 2px 2px gray;
      }
      .x-button{
        position: relative;
-       left: 686px;
+       left: 680px;
        z-index: 1;
        cursor: pointer;
      }
@@ -98,46 +106,66 @@
 
 .create-modal-details{
   height: 100%;
-  width: 45%;
+  width: 50%;
   display: flex;
+  margin-left: 5px;
   flex-direction: column;
-  background: url(http://res.cloudinary.com/dfld7chk4/image/upload/v1468207508/watercolor-grunge-000030-medium-blue_bra7pj.jpg);
+  button:hover{
+
+  }
 }
 
 
 .modal-image-upload{
-  width: 55%;
-
+  width: 48%;
+    display: flex;
+    height: 98%;
+    align-items: center;
+    margin-top: 4px;
+    position: relative;
+    flex-direction: column;
+    justify-content: space-around;
+    left: 18px;
 }
  .creation-map{
-   height: 52%;
-   width: 100%;
+   height: 47%;
+   width: 86%;
+   border-radius: 3px;
  }
 
 .add-image-thumbnail{
-  width: 100%;
-  height: 210px;
-  position: relative;
+  width: 86%;
+height: 47%;
+position: relative;
+border-radius: 3px;
 }
 
 
 .create{
-  position: relative;
-  left: 93px;
-  top: 20px;
-  border: 1px solid blueviolet;
+  cursor: pointer;
+    height: 30px;
+    width: 127px;
+    text-align: center;
+    position: relative;
+    left: 227px;
+    /* width: 131px; */
+    top: -30px;
+    border-radius: 4px;
+    border: 1px solid #de75de;
+    box-shadow: 0px 2px 2px 2px #ccc;
 }
 
 .upload{
   cursor: pointer;
-  height: 24px;
-  width: 112px;
-  text-align: center;
-  border: 1px solid blueviolet;
-  border-radius: 3px;
-  margin-bottom: 6px;
-  margin-top: 7px;
-  margin-left: 4px;
-  position: relative;
-  left: 95px;
+    height: 30px;
+    width: 127px;
+    text-align: center;
+    border: 1px solid #de75de;
+    border-radius: 3px;
+    margin-bottom: 6px;
+    margin-top: 7px;
+    margin-left: 4px;
+    position: relative;
+    top: 4px;
+    box-shadow: 0px 2px 2px 2px #ccc;
 }
