--- a/app/assets/stylesheets/api/occasions.scss
+++ b/app/assets/stylesheets/api/occasions.scss
@@ -3,30 +3,39 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .occasion-pic{
-  height: 100%;
-    width: 50%;
+  height: 74%;
+  width: 45%;
+  margin-right: 11px;
+  border-radius: 6px;
+  opacity: 0.9;
 }
 
 .occasion-box{
   width: 100%;
-  height: 369px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: initial;
-  background: url(http://res.cloudinary.com/dfld7chk4/image/upload/v1468208182/violet-watercolor-background_1048-1264_an7gwc.jpg);
+height: 369px;
+display: flex;
+flex-direction: row;
+align-items: center;
+justify-content: initial;
+background: whitesmoke;
   span{
     display: flex;
     flex-direction: column;
     height: 100%;
     width: 53%;
-
-    overflow: scroll;
+    //
+    // overflow: scroll;
       h2{
         align-self: center;
-        margin-top: 10px;
-        text-decoration: underline;
-        font-size: 19px;
+      margin-top: 10px;
+      background: white;
+      padding: 3px;
+      left: 176px;
+      position: relative;
+      text-align: center;
+      width: 202%;
+      font-size: 19px;
+      font-family: 'Lato', sans-serif;
       }
   }
 }
@@ -47,97 +56,69 @@
 
 .occasion-item{
   display: flex;
-  height: 73px;
-  width: 90%;
-  margin-top: 10px;
+height: 61px;
+width: 90%;
+margin-top: 10px;
+justify-content: flex-start;
+flex-direction: row;
+box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
+background: white;
+}
+
+.time-third{
+  width: 40%;
+  position: relative;
+  right: 5%;
+  display: flex;
+  align-items: center;
+  p{
+    position: relative;
+  }
+}
+
+.date-third{
+  width: 33%;
+  display: flex;
+  font-size: 15px;
+  align-items: center;
   justify-content: space-around;
-  flex-direction: column;
-  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
-  button{
-      margin-right: 14px;
-      font-size: 16px;
-      height: 26px;
-      align-self: center;
-      width: 116px;
-      text-align: center;
-      border:1px solid #7d99ca;
-       border-radius: 3px;
-       font-size:12px;
-       font-family:arial, helvetica, sans-serif;
-       display:inline-block;
-       text-shadow: -1px -1px 0 rgba(0,0,0,0.3);
-       font-weight:bold;
-       color: #FFFFFF;
-       background-color: #a5b8da;
-       background-image: -webkit-gradient(linear, left top, left bottom, from(#a5b8da), to(#7089b3));
-       background-image: -webkit-linear-gradient(top, #a5b8da, #7089b3);
-       background-image: -moz-linear-gradient(top, #a5b8da, #7089b3);
-       background-image: -ms-linear-gradient(top, #a5b8da, #7089b3);
-       background-image: -o-linear-gradient(top, #a5b8da, #7089b3);
-       background-image: linear-gradient(to bottom, #a5b8da, #7089b3);
-       filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#a5b8da, endColorstr=#7089b3);
-    }
+  h4{
+    width: 56%;
+  }
+}
+
+.button-third{
+  width: 27%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  border-left: 1px solid #ccc;
 }
 
 .volunteer{
-  border:1px solid #7d99ca;
-   -webkit-border-radius: 3px;
-   -moz-border-radius: 3px;
-   border-radius: 3px;
-   font-size:12px;
-   font-family:arial, helvetica, sans-serif;
-   display:inline-block;
-   text-shadow: -1px -1px 0 rgba(0,0,0,0.3);
-   font-weight:bold;
-   color: #FFFFFF;
-   background-color: #a5b8da;
-   background-image: -webkit-gradient(linear, left top, left bottom, from(#a5b8da), to(#7089b3));
-   background-image: -webkit-linear-gradient(top, #a5b8da, #7089b3);
-   background-image: -moz-linear-gradient(top, #a5b8da, #7089b3);
-   background-image: -ms-linear-gradient(top, #a5b8da, #7089b3);
-   background-image: -o-linear-gradient(top, #a5b8da, #7089b3);
-   background-image: linear-gradient(to bottom, #a5b8da, #7089b3);
-   filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#a5b8da, endColorstr=#7089b3);
+  height: 102%;
+  width: 100%;
+  text-align: center;
+  background: #94b0ff;
+  opacity: 0.9;
+  box-shadow: 0 2px 0px 1px rgba(128, 128, 128, 0.3);
 }
 .volunteer:hover{
-  border:1px solid #5d7fbc;
-  background-color: #819bcb;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#819bcb), to(#536f9d));
-  background-image: -webkit-linear-gradient(top, #819bcb, #536f9d);
-  background-image: -moz-linear-gradient(top, #819bcb, #536f9d);
-  background-image: -ms-linear-gradient(top, #819bcb, #536f9d);
-  background-image: -o-linear-gradient(top, #819bcb, #536f9d);
-  background-image: linear-gradient(to bottom, #819bcb, #536f9d);
-  filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#819bcb, endColorstr=#536f9d);
+  background: #183994;
 }
 
 
 .cancel{
-  border: 1px solid #ff6262;
-  border-radius: 3px;
-  font-size: 12px;
-  font-family: arial, helvetica, sans-serif;
-  text-decoration: none;
-  display: inline-block;
-  text-shadow: -1px -1px 0 rgba(0,0,0,0.3);
-  font-weight: bold;
-  color: #FFFFFF;
-  background-color: #ff9a9a;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#ff9a9a), to(#ff4040));
-  background-image: -webkit-linear-gradient(top, #ff9a9a, #ff4040);
-  background-image: linear-gradient(to bottom, #ff9a9a, #ff4040);
+  height: 102%;
+    width: 100%;
+    text-align: center;
+    background: #f9a4a4;
+    opacity: 0.9;
+    box-shadow: 0 2px 0px 1px rgba(128, 128, 128, 0.3);
 }
 
 .cancel:hover{
-  border:1px solid #b30808;
- background-color: #e40a0a;
- background-image: -webkit-gradient(linear, left top, left bottom, from(#e40a0a), to(#9f0202));
- background-image: -webkit-linear-gradient(top, #e40a0a, #9f0202);
- background-image: -moz-linear-gradient(top, #e40a0a, #9f0202);
- background-image: -ms-linear-gradient(top, #e40a0a, #9f0202);
- background-image: -o-linear-gradient(top, #e40a0a, #9f0202);
- background-image: linear-gradient(to bottom, #e40a0a, #9f0202);
- filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#e40a0a, endColorstr=#9f0202);
+  background: #e62424;
 }
 
 .matches{
@@ -146,12 +127,13 @@
     font-size: 18px;
   }
   width: 100%;
-  height: 100%;
+min-height: 101px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-
+  margin-bottom: 1px;
+  padding-bottom: 1px;
 }
 
 .non-matches{
@@ -159,12 +141,15 @@
     text-decoration: underline;
     font-size: 18px;
   }
+  .no-more-times{
+    font-size: 10px;
+    font-style: italic;
+  }
   width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
+  margin-bottom: 7px;
 }
 
 .modal-close-button{
@@ -176,4 +161,43 @@
 
 .modal-close-button:hover{
   text-decoration: underline;
+}
+
+
+
+
+.date-as-calendar {
+  font-variant: normal;
+font-style: normal;
+font-weight: normal;
+font-family: "Helvetica", "Arial", sans-serif;
+vertical-align: top;
+height: 100%;
+color: black;
+background: white;
+background: linear-gradient(to bottom right, #FFF 0%, #EEE 100%);
+width: 81px;
+border: 1px solid #888;
+border-radius: 3px;
+overflow: hidden;
+position: relative;
+right: 13px;
+margin-right: 9px;
+box-shadow: 2px 2px 2px -2px #ccc;
+}
+.date-as-calendar .weekday,
+.date-as-calendar .day,
+.date-as-calendar .month,
+.date-as-calendar .year {
+  text-align: center;
+  width: 100%;
+  line-height: 1.0;
+  height: 30%;
+}
+.date-as-calendar .month {
+  font-family: "Oswald", sans-serif;
+  background: rgba(117, 50, 109, 0.38);
+}
+.date-as-calendar .year{
+  border-top: 1px solid #ccc;
 }
