--- a/app/assets/stylesheets/api/schedule_modal.scss
+++ b/app/assets/stylesheets/api/schedule_modal.scss
@@ -7,27 +7,28 @@
   outline: none;
   box-shadow: 2px 10px 40px 0px rgba(0, 0, 0, 0.75);
   height: 400px;
-  width: 700px;
+  width: 730px;
   margin: auto;
   margin-top: 100px;
 }
 
 .schedule-modal-thumbnail{
-  height: 230px;
-  width: 290px;
+  height: 210px;
+  width: 280px;
   position: relative;
-  left: 85px;
+  box-shadow: 2px 3px 3px 2px gray;
+  border-radius: 4px;
 }
 
     // background: rgba(146, 85, 146, 0.39);
 .schedule-content{
   width: 100%;
   display: flex;
-  background-image: url(http://res.cloudinary.com/dfld7chk4/image/upload/v1468203054/watercolor-grunge-000047-sky-blue-indigo_z7ssep.jpg);
+  background: white;
 
   h1{
     text-decoration: underline;
-    font-size: 22px;
+    font-size: 20px;
     align-self: center;
     margin-bottom: 6px;
     font-weight: 700;
@@ -35,10 +36,12 @@
   }
 
   h2{
-    text-decoration: underline;
-    font-size: 19px;
+    font-size: 16px;
+    margin-top: 2px;
+    font-weight: bold;
+    text-align: center;
     align-self: center;
-    margin-bottom: 6px;
+    margin-bottom: 5px;
   }
 
   button{
@@ -55,12 +58,13 @@
 .smaller-details{
   display: flex;
   flex-direction: column;
-  height: 150px;
+  height: 100px;
   width: 100%;
-  overflow: scroll;
   margin-left: 5px;
-  margin-right: 190px;
   margin-top: 10px;
+  p{
+    margin-top: 7px;
+  }
 }
 
 .the-message{
@@ -80,61 +84,92 @@
   justify-content: flex-start;
   margin: 13px;
   height: 100%;
-  width: 36%;
+  width: 53%;
   overflow: scroll;
 }
 
 .schedule-item{
-  height: 105px;
-width: 198px;
-display: flex;
-margin-bottom: 18px;
-margin-left: 4px;
-align-self: center;
-flex-direction: column;
-justify-content: space-around;
-box-shadow: 0 2px 9px rgba(19, 100, 100, 0.7);
+  height: 79px;
+  width: 98%;
+  display: flex;
+  margin-bottom: 18px;
+  margin-left: 4px;
+  padding-left: 7px;
+  align-self: center;
+  flex-direction: row;
+  justify-content: space-around;
+  box-shadow: 0 2px 9px rgba(19, 100, 100, 0.7);
   span{
     display: flex;
     justify-content: space-between;
+    display: flex;
+    flex-direction: column;
+    width: 25%;
   }
+  button{
+    height: 50%;
+    height: 50%;
+    font-family: 'Lato', sans-serif;
+    font-size: 13px;
+  }
+}
+
+info{
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  right: 12px;
+}
+
+
+.calandar-third{
+  display: flex;
+  width:30%;
+  height: 100%;
+  font-size: 15px;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .venue-display{
-  width: 64%;
-height: 100%;
-background: rgba(146, 85, 146, 0.2);
+  width: 40%;
+    height: 100%;
+    background: white;
+    margin: 13px;
+    display: flex;
+    flex-direction: column;
   button{
-    border:1px solid #7d99ca;
-    border: 1px solid #7d99ca;
-    width: 141px;
-    position: relative;
-    bottom: 75px;
-     border-radius: 3px;
-     font-size:16px;
-     font-family:arial, helvetica, sans-serif;
-     display:inline-block;
-     text-shadow: -1px -1px 0 rgba(0,0,0,0.3);
-     font-weight:bold;
-     color: #FFFFFF;
-     background-color: #a5b8da;
-     background-image: -webkit-gradient(linear, left top, left bottom, from(#a5b8da), to(#7089b3));
-     background-image: -webkit-linear-gradient(top, #a5b8da, #7089b3);
-     background-image: -moz-linear-gradient(top, #a5b8da, #7089b3);
-     background-image: -ms-linear-gradient(top, #a5b8da, #7089b3);
-     background-image: -o-linear-gradient(top, #a5b8da, #7089b3);
-     background-image: linear-gradient(to bottom, #a5b8da, #7089b3);
-     filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#a5b8da, endColorstr=#7089b3);
+    width: 100%;
+    border: 0.5px solid #ccc;
+    height: 28px;
+    box-shadow: 0 1px 1px 1px;
+    font-size: 15px;
+    background: #94b0ff;
+  }
+  button:hover{
+    box-shadow: inset 0 0 5px #ccc;
+  }
+  button:focus{
+    box-shadow: inset 0 1px 2px 2px gray;
   }
 }
 
 
-
+.location{
+  position: relative;
+  font-size: 12px;
+  align-self: baseline;
+  left: 15px;
+  font-style: italic;
+  margin-top: 4px;
+}
 .schedule-close{
   position: relative;
-  bottom: 670px;
-  left: 685px;
-  cursor: pointer
+  bottom: 342px;
+  left: 713px;
+  cursor: pointer;
 }
 
 .schedule-close:hover{
